Thu Oct 10 16:12:38 1996  Tom Tromey  <tromey@cygnus.com>

	* automake.in (read_am_file): Removed UNMAINT code.
	(file_contents_with_transform): Ditto.
	* m4/maintainer.m4: Removed bogus UNMAINT code.

	* automake.in (handle_emacs_lisp): Define EMACS variable.
	(handle_emacs_lisp): Make sure EMACS is in environment when
	elisp-comp is run.

	* elisp-comp: Exit with status 1 if usage bad.
	Use "emacs -q".  Use EMACS environment variable if set (unless set
	to t).

	* m4/lispdir.m4: Unset EMACS if it is set to `t'.

	* automake.in (handle_dist_worker): Allow EXTRA_DIST items to be
	in subdirs.
	(do_one_merge_target): Use all-am, not all, in subdirs case.
	(handle_merge_targets): Always generate all-am in subdirs case.

	* remake.am (Makefile): Depend on BUILT_SOURCES.
	* remake-subd.am (Makefile): Depend on BUILT_SOURCES.
	* depend.am (.deps/.P): Don't depend on BUILT_SOURCES.

	* automake.in (handle_yacc_lex_cxx): Handle y.tab.h in non-ylwrap
	case.

	* ylwrap: Bug fix.  From Jim Meyering.

Wed Oct  9 22:51:16 1996  Tom Tromey  <tromey@cygnus.com>

	* m4/mktime.m4: Don't define AC_HEADER_SYS_TIME_H; instead just
	check directly for header.

Mon Oct  7 13:08:15 1996  Tom Tromey  <tromey@cygnus.com>

	* automake.in (scan_configure): fp_WITH_DMALLOC and fp_WITH_REGEX
	are obsolete.

Sun Oct  6 00:43:01 1996  Tom Tromey  <tromey@cygnus.com>

	* automake.in (AC_CONFIG_AUX_DIR_PATTERN): New global.
	(AM_INIT_AUTOMAKE_PATTERN): New global.
	(scan_configure): Use them.

	* aclocal.in (add_file): Search contents of included files.  Test
	req.test.
	(scan_m4_files): Don't skip acinclude.m4 when constructing
	search.  Test acsilent.test.
	(scan_m4_files): Scan acinclude.m4.

	* aclocal.in (add_file): Removed debugging print.
	(scan_configure): Set $file_contents when scanning acinclude.m4.
	Test acinclude.test.

	* configure.in: Upped to 1.1g.

	* Released 1.1f.

	* texinfos.am: Run : after install-info.

	* aclocal.in (parse_arguments): Better error message.