@@ -18,7 +18,8 @@
 $(CONFIG_HEADER): stamp-h
 stamp-h: $(CONFIG_HEADER_IN) config.status
 	cd $(top_builddir) \
-	  && CONFIG_FILES= CONFIG_HEADERS=$(CONFIG_HEADER) ./config.status
+	  && CONFIG_FILES= CONFIG_HEADERS=$(CONFIG_HEADER) \
+	     $(SHELL) ./config.status
 	@echo timestamp > stamp-h
 $(srcdir)/$(CONFIG_HEADER_IN): @MAINT@stamp-h.in
 $(srcdir)/stamp-h.in: configure.in $(ACLOCAL) $(ACCONFIG) $(CONFIG_TOP) $(CONFIG_BOT)
