@@ -1,5 +1,14 @@
 Thu Oct 10 16:12:38 1996  Tom Tromey  <tromey@cygnus.com>
 
+	* automake.in (handle_configure): Run mkinstalldirs under
+	$(SHELL).
+	(handle_yacc_lex_cxx): Run interlock under $(SHELL).
+
+	* remake-subd.am (Makefile): Run config.status under $(SHELL).
+	* remake-hdr.am (stamp-h): Run config.status under $(SHELL).
+	* remake.am (Makefile): Run config.status under $(SHELL).
+	(config.status): Ditto.
+
 	* automake.in (read_am_file): Removed UNMAINT code.
 	(file_contents_with_transform): Ditto.
 	* m4/maintainer.m4: Removed bogus UNMAINT code.
